...
 */
@Composable
fun VocalizeTopAppBar(
    title: String,
    modifier: Modifier = Modifier,
    navigationIcon: ImageVector = VocalizeIcons.ArrowBack,
    navigationIconContentDescription: String? = "Back",
    onNavigationClick: (() -> Unit)? = null,
    actions: @Composable RowScope.() -> Unit = {},
) {
    VocalizeTopAppBar(
        title = { Text(text = title) },
        modifier = modifier,
...
